// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditFilterListHeader renders the header when creating a new filter list with ID, description and items set 1`] = `
<div>
  <div
    class="css-ayyaqq-root-root-root-root"
    data-test-subj="appHeader"
  >
    <div
      class="css-t37kb7-primaryRow-primaryRow-primaryRow"
    >
      <div
        class="css-856hcb-titleCluster"
      >
        <div
          class="css-1cqdmpr-titleGroup"
        >
          <div
            class="css-p0ahs1-wrapper"
          >
            <div
              class="css-mohf4p-titleWrapper-titleOffsetStyle-Title"
            >
              <h1
                class="euiTitle emotion-euiTitle-s"
              >
                <span
                  class="css-brsrfa-titleFrame"
                >
                  <span
                    aria-hidden="true"
                    class="css-gbhrtv-titleSizer"
                  >
                    Create new filter list
                  </span>
                  <span
                    class="css-zgy7p9-titleText-readContent"
                    data-test-subj="appHeaderTitle"
                  >
                    Create new filter list
                  </span>
                </span>
              </h1>
            </div>
          </div>
          <div
            class="titleActionsReveal css-19se5e4-titleActionsReveal"
          />
        </div>
        <div
          aria-hidden="true"
          class="css-ph3hxu-titleClusterSpacer"
        />
      </div>
      <div
        class="css-1ddjbeg-trailingSlot"
      />
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-m-spaceBetween-baseline-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-baseline-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="emotion-euiTextColor-subdued"
          >
            <p>
              15 items in total
            </p>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
        for="generated-id"
        id="generated-id-label"
      >
        Filter list ID
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="generated-id-help-0"
            class="euiFieldText emotion-euiFieldText"
            data-test-subj="mlNewFilterListIdInput"
            id="generated-id"
            name="new_filter_id"
            type="text"
            value="test_filter_list"
          />
        </div>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text emotion-euiFormHelpText"
        id="generated-id-help-0"
      >
        Use lowercase alphanumerics (a-z and 0-9), hyphens or underscores; must start and end with an alphanumeric character
      </div>
    </div>
  </div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiText emotion-euiText-m"
        data-test-subj="mlNewFilterListDescriptionText"
      >
        <p>
          A test filter list
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div>
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          id="filter_list_description_popover"
        >
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            id="generated-id_euiToolTipAnchor"
          >
            <button
              aria-label="Edit description"
              class="euiButtonIcon emotion-euiButtonIcon-s-empty-primary"
              data-test-subj="mlFilterListEditDescriptionButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="pencil"
              />
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
</div>
`;

exports[`EditFilterListHeader renders the header when creating a new filter list with the ID not set 1`] = `
<div>
  <div
    class="css-ayyaqq-root-root-root-root"
    data-test-subj="appHeader"
  >
    <div
      class="css-t37kb7-primaryRow-primaryRow-primaryRow"
    >
      <div
        class="css-856hcb-titleCluster"
      >
        <div
          class="css-1cqdmpr-titleGroup"
        >
          <div
            class="css-p0ahs1-wrapper"
          >
            <div
              class="css-mohf4p-titleWrapper-titleOffsetStyle-Title"
            >
              <h1
                class="euiTitle emotion-euiTitle-s"
              >
                <span
                  class="css-brsrfa-titleFrame"
                >
                  <span
                    aria-hidden="true"
                    class="css-gbhrtv-titleSizer"
                  >
                    Create new filter list
                  </span>
                  <span
                    class="css-zgy7p9-titleText-readContent"
                    data-test-subj="appHeaderTitle"
                  >
                    Create new filter list
                  </span>
                </span>
              </h1>
            </div>
          </div>
          <div
            class="titleActionsReveal css-19se5e4-titleActionsReveal"
          />
        </div>
        <div
          aria-hidden="true"
          class="css-ph3hxu-titleClusterSpacer"
        />
      </div>
      <div
        class="css-1ddjbeg-trailingSlot"
      />
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-m-spaceBetween-baseline-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-baseline-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="emotion-euiTextColor-subdued"
          >
            <p>
              0 items in total
            </p>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="true"
        class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid emotion-euiFormLabel-invalid"
        for="generated-id"
        id="generated-id-label"
      >
        Filter list ID
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout emotion-euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
          style="--euiFormControlRightIconsCount: 1;"
        >
          <input
            aria-describedby="generated-id-error-0"
            aria-invalid="true"
            class="euiFieldText emotion-euiFieldText"
            data-test-subj="mlNewFilterListIdInput"
            id="generated-id"
            name="new_filter_id"
            type="text"
            value=""
          />
          <div
            class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
          >
            <span
              color="danger"
              data-euiicon-type="warning"
            />
          </div>
        </div>
      </div>
      <div
        aria-live="polite"
        class="euiFormErrorText euiFormRow__text emotion-euiFormErrorText"
        id="generated-id-error-0"
      >
        Use lowercase alphanumerics (a-z and 0-9), hyphens or underscores; must start and end with an alphanumeric character
      </div>
    </div>
  </div>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiText emotion-euiText-m"
      >
        <span
          class="emotion-euiTextColor-subdued"
        >
          Add a description
        </span>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div>
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          id="filter_list_description_popover"
        >
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            id="generated-id_euiToolTipAnchor"
          >
            <button
              aria-label="Edit description"
              class="euiButtonIcon emotion-euiButtonIcon-s-empty-primary"
              data-test-subj="mlFilterListEditDescriptionButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="pencil"
              />
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
</div>
`;

exports[`EditFilterListHeader renders the header when editing an existing unused filter list with no description or items 1`] = `
<div>
  <div
    class="css-ayyaqq-root-root-root-root"
    data-test-subj="appHeader"
  >
    <div
      class="css-t37kb7-primaryRow-primaryRow-primaryRow"
    >
      <div
        class="css-856hcb-titleCluster"
      >
        <div
          class="css-1cqdmpr-titleGroup"
        >
          <div
            class="css-p0ahs1-wrapper"
          >
            <div
              class="css-mohf4p-titleWrapper-titleOffsetStyle-Title"
            >
              <h1
                class="euiTitle emotion-euiTitle-s"
              >
                <span
                  class="css-brsrfa-titleFrame"
                >
                  <span
                    aria-hidden="true"
                    class="css-gbhrtv-titleSizer"
                  >
                    Filter list test_filter_list
                  </span>
                  <span
                    class="css-zgy7p9-titleText-readContent"
                    data-test-subj="appHeaderTitle"
                  >
                    Filter list test_filter_list
                  </span>
                </span>
              </h1>
            </div>
          </div>
          <div
            class="titleActionsReveal css-19se5e4-titleActionsReveal"
          />
        </div>
        <div
          aria-hidden="true"
          class="css-ph3hxu-titleClusterSpacer"
        />
      </div>
      <div
        class="css-1ddjbeg-trailingSlot"
      />
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-m-spaceBetween-baseline-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-baseline-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="emotion-euiTextColor-subdued"
          >
            <p>
              0 items in total
            </p>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiText emotion-euiText-m"
      >
        <span
          class="emotion-euiTextColor-subdued"
        >
          Add a description
        </span>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div>
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          id="filter_list_description_popover"
        >
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            id="generated-id_euiToolTipAnchor"
          >
            <button
              aria-label="Edit description"
              class="euiButtonIcon emotion-euiButtonIcon-s-empty-primary"
              data-test-subj="mlFilterListEditDescriptionButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="pencil"
              />
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiText emotion-euiText-m"
  >
    <p>
      This filter list is not used by any jobs.
    </p>
  </div>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
</div>
`;

exports[`EditFilterListHeader renders the header when editing an existing used filter list with description and items set 1`] = `
<div>
  <div
    class="css-ayyaqq-root-root-root-root"
    data-test-subj="appHeader"
  >
    <div
      class="css-t37kb7-primaryRow-primaryRow-primaryRow"
    >
      <div
        class="css-856hcb-titleCluster"
      >
        <div
          class="css-1cqdmpr-titleGroup"
        >
          <div
            class="css-p0ahs1-wrapper"
          >
            <div
              class="css-mohf4p-titleWrapper-titleOffsetStyle-Title"
            >
              <h1
                class="euiTitle emotion-euiTitle-s"
              >
                <span
                  class="css-brsrfa-titleFrame"
                >
                  <span
                    aria-hidden="true"
                    class="css-gbhrtv-titleSizer"
                  >
                    Filter list test_filter_list
                  </span>
                  <span
                    class="css-zgy7p9-titleText-readContent"
                    data-test-subj="appHeaderTitle"
                  >
                    Filter list test_filter_list
                  </span>
                </span>
              </h1>
            </div>
          </div>
          <div
            class="titleActionsReveal css-19se5e4-titleActionsReveal"
          />
        </div>
        <div
          aria-hidden="true"
          class="css-ph3hxu-titleClusterSpacer"
        />
      </div>
      <div
        class="css-1ddjbeg-trailingSlot"
      />
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-m-spaceBetween-baseline-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-baseline-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-growZero"
        >
          <span
            class="emotion-euiTextColor-subdued"
          >
            <p>
              15 items in total
            </p>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
  <div
    class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        class="euiText emotion-euiText-m"
        data-test-subj="mlNewFilterListDescriptionText"
      >
        <p>
          A test filter list
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div>
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          id="filter_list_description_popover"
        >
          <span
            class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
            id="generated-id_euiToolTipAnchor"
          >
            <button
              aria-label="Edit description"
              class="euiButtonIcon emotion-euiButtonIcon-s-empty-primary"
              data-test-subj="mlFilterListEditDescriptionButton"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="pencil"
              />
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="ml-filter-list-usage"
  >
    <div
      class="euiText emotion-euiText-m"
    >
      This filter list is used in
    </div>
    <div>
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        id="detector_filter_list_usage"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-primary"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text css-1ryezsz-s"
            >
              1 detector
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="euiText emotion-euiText-m"
    >
      across
    </div>
    <div>
      <div
        class="euiPopover emotion-euiPopover-inline-block"
        id="job_filter_list_usage"
      >
        <button
          class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-primary"
          type="button"
        >
          <span
            class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
          >
            <span
              class="eui-textTruncate euiButtonEmpty__text css-1ryezsz-s"
            >
              1 job
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
</div>
`;
